responsive alignments fixed.

--- a/public/scss/_responsive.scss
+++ b/public/scss/_responsive.scss
@@ -1267,7 +1267,7 @@
   }
 
   .main-header {
-    padding: 15px;
+    padding: 7px 10px;
     // height: unset;
   }
 
